[package]
name = "l2_map"
version = "0.1.0"
edition = "2024"
license-file = "../LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec.workspace = true
derive-where.workspace = true
index_list.workspace = true
itertools.workspace = true

hashmap_tools.workspace = true

[dev-dependencies]
rand = "*"
