[package]
name = "relation_pipeline"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec.workspace = true
derive-where.workspace = true
either.workspace = true

broadcast_channel.workspace = true
hashmap_tools.workspace = true
l2_heaps.workspace = true
l2_map.workspace = true
swap_channel.workspace = true
