[package]
name = "satsolver"
version = "0.1.0"
edition = "2024"
license-file = "../LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
once_cell.workspace = true

loopy_relations.workspace = true
sat.workspace = true
satsolver_relgraph.workspace = true
