[package]
name = "satsolver_relgraph"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either.workspace = true

loopy_relations.workspace = true
relation_pipeline.workspace = true
sat.workspace = true
